--- a/Public/base.css
+++ b/Public/base.css
@@ -15,17 +15,5 @@ body {
     font-family: var(--font-family);
     background-color: black;
     color: white;
-}
-
-
-/*** HEADER ****/
-
-
-/*** MAIN ****/
-
-
-/*** FOOTER ***/
-
-footer {
-    
+    overflow-x: hidden;
 }
