--- a/Public/base.css
+++ b/Public/base.css
@@ -17,3 +17,8 @@ body {
     color: white;
     overflow-x: hidden;
 }
+
+/***Fonts******/
+h1 { font-weight: 900;}
+h4 { font-weight: 500;}
+p { font-weight: 200;}
