--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="../Assets/Svg/favicon-logo.svg">
     <title>CV - Kevin Gomes</title>
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="layout.css">
