--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="../Assets/Svg/favicon-logo.svg">
+    <title>CV - Kevin Gomes</title>
+    <link rel="stylesheet" href="/styles/style.css">
+</head>
 <body>
     <main>
         <section>
@@ -10,12 +20,14 @@
 
                 <div class="container">
                     <div class="flexbox-flag">
-                        <a href="./Public/gb.html"><img src="./Assets/Svg/gb.svg" alt="flag of the United Kingdom"></a>
-                        <a href="./Public/fr.html"><img src="./Assets/Svg/fr.svg" alt="flag of France"></a>
-                        <a href="./Public/de.html"><img src="./Assets/Svg/de.svg" alt="flag of Germany"></a>
+                        <a href="./Public/gb.html"><img src="/Assets/Svg/gb.svg" alt="flag of the United Kingdom"></a>
+                        <a href="./Public/fr.html"><img src="/Assets/Svg/fr.svg" alt="flag of France"></a>
+                        <a href="./Public/de.html"><img src="/Assets/Svg/de.svg" alt="flag of Germany"></a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
+<%- include("../partials/footer.ejs") %>
