--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,8 +21,8 @@
                 <div class="container">
                     <div class="flexbox-flag">
                         <a href="/views/pages/gb.ejs"><img src="/Assets/Svg/gb.svg" alt="flag of the United Kingdom"></a>
-                        <a href="/views/pages/gb.ejs"><img src="/Assets/Svg/fr.svg" alt="flag of France"></a>
-                        <a href="/views/pages/gb.ejs"><img src="/Assets/Svg/de.svg" alt="flag of Germany"></a>
+                        <a href="/views/pages/fr"><img src="/Assets/Svg/fr.svg" alt="flag of France"></a>
+                        <a href="/views/pages/de"><img src="/Assets/Svg/de.svg" alt="flag of Germany"></a>
                     </div>
                 </div>
             </div>
