--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
             <div class="wrapper">
                 <div class="container">
                     <h1>Curriculum Vitae</h1>
-                    <h2>Kevin Gomes Pardal       Antunes</h2>
+                    <h2>Kevin Gomes Pardal      frf Antunes</h2>
                     <h3>Language | Langage | Sprache</h3>
                 </div>
 
