--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -2,4 +2,85 @@
 
 <%- include("../partials/navbar.ejs") %>
 
+<section id="hero">
+    <div class="wrapper two-columns">
+        <div class="container">
+            <img src="../Assets/Img/cv-image.png" alt="Portait Image">
+        </div>
+
+        <div class="container">
+            <h1>
+                <span>Aspiring</span>
+                <span>Business</span>
+                <span>Professional</span>
+            </h1>
+            <h4>High School Graduate in Commerce and Administration</h4>
+            <p>
+            My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
+            Technique d'Ettelbruck" with a focus on Commerce and Administration.
+            </p>
+            <a href="../Assets/Pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+        </div>
+    </div>
+    
+</section>
+
+<section id="education">
+    <div class="wrapper">
+        <div class="container">
+            <h2>Education</h2>
+            <span class="title">Specialty</span>
+        </div>
+
+        <div class="two-columns">
+            <div class="container">
+                image
+            </div>
+
+            <div class="container">
+                Text
+            </div>
+        </div>
+
+        <div class="two-columns">
+            <div class="container">
+                Certifications
+            </div>
+
+            <div class="container">
+                Leisure Activities
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="experience">
+    <div class="wrapper">
+        <div class="container">
+            <h2>Work Experience</h2>
+            <span class="title"></span>
+        </div>
+
+        <div class="container">
+
+        </div>
+
+        <div class="container">
+
+        </div>
+    </div>
+</section>
+
+<section id="skills">
+    <div class="wrapper">
+
+    </div>
+</section>
+
+<section>
+    <div class="wrapper">
+
+    </div>
+</section>
+
 <%- include("../partials/footer.ejs") %>
