--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
         </main>
 
         <footer>
-            <p>Copright - <%= new Date().getFullYear(); %></p>
+            <p>Copright - <%= new Date().getFullYear() %></p>
         </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
