--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -5,7 +5,7 @@
 <section id="hero">
     <div class="wrapper two-columns">
         <div class="container">
-            <img src="../Assets/Img/cv-image.png" alt="Portait Image">
+            <img src="/assets/img/cv-image.png" alt="Portait Image">
         </div>
 
         <div class="container">
@@ -19,7 +19,7 @@
             My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
             Technique d'Ettelbruck" with a focus on Commerce and Administration.
             </p>
-            <a href="../Assets/Pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+            <a href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
         </div>
     </div>
     
