--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,9 +20,9 @@
 
                 <div class="container">
                     <div class="flexbox-flag">
-                        <a href="/gb"><img src="/assets/svg/gb.svg" alt="flag of the United Kingdom"></a>
-                        <a href="/fr"><img src="/assets/svg/fr.svg" alt="flag of France"></a>
-                        <a href="/de"><img src="/assets/svg/de.svg" alt="flag of Germany"></a>
+                        <a href="/gb"><img src="assets/svg/gb.svg" alt="flag of the United Kingdom"></a>
+                        <a href="/fr"><img src="assets/svg/fr.svg" alt="flag of France"></a>
+                        <a href="/de"><img src="assets/svg/de.svg" alt="flag of Germany"></a>
                     </div>
                 </div>
             </div>
