--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -19,7 +19,7 @@
             My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
             Technique d'Ettelbruck" with a focus on Commerce and Administration.
             </p>
-            <a href="/assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+            <a href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
         </div>
     </div>
     
