--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -14,7 +14,7 @@
                 <span>Business</span>
                 <span>Professional</span>
             </h1>
-            <h4>High School Graduate in Commerce and Administration</h4>
+            <h5>High School Graduate in Commerce and Administration</h5>
             <p>
             My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
             Technique d'Ettelbruck" with a focus on Commerce and Administration.
@@ -38,7 +38,16 @@
             </div>
 
             <div class="container">
-                Text
+                <h3>
+                    <span>Aspiring</span>
+                    <span>Business</span>
+                    <span>Professional</span>
+                </h3>
+                <h5>High School Graduate in Commerce and Administration</h5>
+                <p>
+                My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
+                Technique d'Ettelbruck" with a focus on Commerce and Administration.
+                </p>
             </div>
         </div>
 
