--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -27,14 +27,14 @@
 
 <section id="education">
     <div class="wrapper">
-        <div class="container">
+        <div class="container flex-title">
             <h2>Education</h2>
             <span class="title">Specialty</span>
         </div>
 
         <div class="two-columns">
             <div class="container">
-                image
+                <img src="/assets/img/books.png" alt="">
             </div>
 
             <div class="container">
