--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -53,7 +53,7 @@
 
         <div class="two-columns">
             <div class="container">
-                Certifications
+                <div class="flex-title">Certifications</div>
             </div>
 
             <div class="container">
