--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -19,7 +19,9 @@
             My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
             Technique d'Ettelbruck" with a focus on Commerce and Administration.
             </p>
-            <a href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+            <a class="btn-link" href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">
+                Download CV
+            </a>
         </div>
     </div>
     
@@ -27,9 +29,11 @@
 
 <section id="education">
     <div class="wrapper">
-        <div class="container flex-title">
-            <h2>Education</h2>
-            <span class="title">Specialty</span>
+        <div class="container">
+            <div class="flex-title">
+                <h2>Education</h2>
+                <span class="title">Specialty</span>
+            </div>
         </div>
 
         <div class="two-columns">
@@ -38,26 +42,69 @@
             </div>
 
             <div class="container">
-                <h3>
-                    <span>Aspiring</span>
-                    <span>Business</span>
-                    <span>Professional</span>
-                </h3>
-                <h5>High School Graduate in Commerce and Administration</h5>
-                <p>
-                My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
-                Technique d'Ettelbruck" with a focus on Commerce and Administration.
-                </p>
+                <div class="text">
+                    <h3>
+                        <span>Life long learning</span>
+                        <span>is essential to</span>
+                        <span>succeed nowadays</span>
+                    </h3>
+                    <h5>It's crucial in the currently evolving job market.</h5>
+                    <p>
+                        My high school education has provided me with a solid foundation in business 
+                        principles, and I'm excited to continue learning and growing in this field.
+                        I'm passionate about business management, finance, and entrepreneurship, 
+                        and I'm eager to bring my skills and enthusiasm to a dynamic team.
+                    </p>
+                </div>
             </div>
         </div>
 
         <div class="two-columns">
             <div class="container">
-                <div class="flex-title">Certifications</div>
+                <div class="flex-title">
+                    <h4>Certifications</h4>
+                    <span class="title-1">Awards</span>
+                </div>
+                <div class="column-list">
+                    <div class="column-box">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <p>A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <p>A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <p>A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
+                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <p>A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+                </div>
             </div>
 
             <div class="container">
-                Leisure Activities
+                <div class="flex-title">
+                    <h4>Leisure</h4>
+                    <span class="title-1">Hobbies</span>
+                </div>
             </div>
         </div>
     </div>
@@ -66,16 +113,37 @@
 <section id="experience">
     <div class="wrapper">
         <div class="container">
-            <h2>Work Experience</h2>
-            <span class="title"></span>
+            <div class="flex-title">
+                <h2>Work Experience</h2>
+                <span class="title">Overview</span>
+            </div>
         </div>
 
         <div class="container">
-
+            <div class="text">
+                <h3>
+                    <span>Life long learning</span>
+                    <span>is essential to</span>
+                    <span>succeed nowadays</span>
+                </h3>
+                <h5>It's crucial in the currently evolving job market.</h5>
+                <p>
+                    My high school education has provided me with a solid foundation in business 
+                    principles, and I'm excited to continue learning and growing in this field.
+                    I'm passionate about business management, finance, and entrepreneurship, 
+                    and I'm eager to bring my skills and enthusiasm to a dynamic team.
+                </p>
+            </div>
         </div>
 
-        <div class="container">
+        <div class="two-columns">
+            <div class="container">
 
+            </div>
+    
+            <div class="container">
+    
+            </div>
         </div>
     </div>
 </section>
