--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,8 +7,8 @@
 
             <div class="header-container">
                 <ul class="dropdown-menu">
-                    <li><a href="fr.html">Service 1</a></li>
-                    <li><a href="de.html">Service 2</a></li>
+                    <li><a href="/fr">Français</a></li>
+                    <li><a href="/de">Deutsch</a></li>
                 </ul>
 
                 <div class="menu-toggle">☰ Menu</div>
