--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -19,9 +19,9 @@
             My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
             Technique d'Ettelbruck" with a focus on Commerce and Administration.
             </p>
-            <a class="btn-link" href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">
-                Download CV
-            </a>
+            <div class="btn-link">
+                <a href="assets/pdf/1GCC-élève-méritant.pdf" download="1GCC-élève-méritant.pdf" class="download-button">Download CV</a>
+            </div>
         </div>
     </div>
     
@@ -69,32 +69,34 @@
                     <div class="column-box">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
                         <span class="white-2">1GCC | Deserving Student 2023/24</span>
-                        <p>A distinction awarded to students with outstanding marks
+                        <p>
+                            A distinction awarded to students with outstanding marks
                             and examplary behavior.
                         </p>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
-                        <p>A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                        <span class="gray-1">CNPSES & Chambre de Commerce</span>
+                        <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
+                        <p>
+                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
                         </p>
                     </div>
 
                     <div class="column-box">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
-                        <p>A distinction awarded to students with outstanding marks
+                        <span class="white-2">2GCC | Deserving Student 2022/23</span>
+                        <p>
+                            A distinction awarded to students with outstanding marks
                             and examplary behavior.
                         </p>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
-                        <p>A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                        <span class="gray-1">Jonk Entrepreneuren</span>
+                        <span class="white-2">Trendiction SA | Job Shadow Event 2024</span>
+                        <p>
+                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
                         </p>
                     </div>
                 </div>
@@ -104,6 +106,42 @@
                 <div class="flex-title">
                     <h4>Leisure</h4>
                     <span class="title-1">Hobbies</span>
+                </div>
+
+                <div class="column-list">
+                    <div class="column-box">
+                        <span class="gray-1">Since 2024</span>
+                        <span class="white-2">Photo Editing</span>
+                        <p>
+                            A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Since 2023</span>
+                        <span class="white-2">Web Development</span>
+                        <p>
+                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Since 2022</span>
+                        <span class="white-2">Physical Exercise</span>
+                        <p>
+                            A distinction awarded to students with outstanding marks
+                            and examplary behavior.
+                        </p>
+                    </div>
+
+                    <div class="column-box">
+                        <span class="gray-1">Since 2018</span>
+                        <span class="white-2">Graphic Design</span>
+                        <p>
+                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
