--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -114,7 +114,7 @@
                         <span class="white-2">Photo Editing</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            and examplary behavior
                         </p>
                     </div>
 
@@ -131,7 +131,7 @@
                         <span class="white-2">Physical Exercise</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            and examplary behavior
                         </p>
                     </div>
 
