--- a/public/css/components.css
+++ b/public/css/components.css
@@ -148,7 +148,7 @@ header {
     bottom: 0;
     left: 0;
     width: 0;
-    height: 3px;
+    height: 2px;
     background-color: white;
     transition: width 0.4s ease-in-out;
     z-index: 0;
@@ -165,8 +165,14 @@ header {
 
 span { display: block; }
 
+
 /** Personal Goal Section ***/
 
+.column-box ul {
+    padding-left: 1.1rem;
+    text-indent: -1.1rem;
+    list-style: url("/assets/svg/circle-bullet.svg");
+}
 
 /** Education Section ***/
 .flex-title {
@@ -175,5 +181,6 @@ span { display: block; }
     align-items: center;
 }
 
-.gray-1 { color: #595959;}
+.gray-1,
+.title-1 { color: #595959;}
 .white-2 { font-weight: 500;}
