--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -50,10 +50,11 @@
                     </h3>
                     <h5>It's crucial in the currently evolving job market.</h5>
                     <p>
-                        My high school education has provided me with a solid foundation in business 
-                        principles, and I'm excited to continue learning and growing in this field.
-                        I'm passionate about business management, finance, and entrepreneurship, 
-                        and I'm eager to bring my skills and enthusiasm to a dynamic team.
+                        Aspiring finance and accounting professional pursuing online 
+                        bachelor's and master's degrees, with a focus on financial markets 
+                        and stock-related sectors. Proficient in data analysis, financial management, 
+                        and accounting software, with a passion for leveraging numbers to drive 
+                        business growth. Fluent in five languages, with great problem-solving and organizational skills.
                     </p>
                 </div>
             </div>
@@ -62,17 +63,21 @@
         <div class="two-columns">
             <div class="container">
                 <div class="flex-title">
-                    <h4>Certifications</h4>
-                    <span class="title-1">Awards</span>
+                    <h4>Education Path</h4>
+                    <span class="title-1">Plan</span>
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
-                        <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
-                        </p>
+                        <ul>
+                            <li>
+                                <span class="gray-1">dfdd</span>
+                                <span class="white-2">Online Bachelor Degree in Finance</span>
+                                <p>
+                                    A distinction awarded to students with outstanding marks
+                                    and examplary behavior.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="column-box">
@@ -104,8 +109,8 @@
 
             <div class="container">
                 <div class="flex-title">
-                    <h4>Leisure</h4>
-                    <span class="title-1">Hobbies</span>
+                    <h4>Job Positions</h4>
+                    <span class="title-1">Plan</span>
                 </div>
 
                 <div class="column-list">
