--- a/public/css/components.css
+++ b/public/css/components.css
@@ -182,8 +182,9 @@ span { display: block; }
     content: "";
     position: absolute;
     left: 0;
-    width: 30px; /* Set the width of the custom bullet */
-    height: 30px; /* Set the height */
+    top: 1.4rem;
+    width: 20px; /* Set the width of the custom bullet */
+    height: 20px; /* Set the height */
     background-image: url("/assets/svg/circle-bullet.svg"); /* Path to your image or icon */
     background-size: contain; /* Ensure it scales properly */
     background-repeat: no-repeat;
