--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -70,7 +70,21 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">dfdd</span>
+                                <span class="gray-1">IU Hochschule</span>
+                                <span class="white-2">Bachelor Degree | in Finance</span>
+                                <p>
+                                    A distinction awarded to students with outstanding marks
+                                    and examplary behavior.
+                                </p>
+                                
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column-box">
+                        <ul>
+                            <li>
+                                <span class="gray-1">UI Hochschule</span>
                                 <span class="white-2">Online Bachelor Degree in Finance</span>
                                 <p>
                                     A distinction awarded to students with outstanding marks
@@ -81,28 +95,17 @@
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">CNPSES & Chambre de Commerce</span>
-                        <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
-                        <p>
-                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">2GCC | Deserving Student 2022/23</span>
-                        <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Jonk Entrepreneuren</span>
-                        <span class="white-2">Trendiction SA | Job Shadow Event 2024</span>
-                        <p>
-                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
-                        </p>
+                        <ul>
+                            <li>
+                                <span class="gray-1">CFA Institute</span>
+                                <span class="white-2">Online Bachelor Degree in Finance</span>
+                                <p>
+                                    A distinction awarded to students with outstanding marks
+                                    and examplary behavior.
+                                </p>
+                                <a href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
